--- a/Hello_World_js_Docker/docker-compose.yml
+++ b/Hello_World_js_Docker/docker-compose.yml
@@ -5,3 +5,5 @@ services:
     image: hello-world-js-app:1.0
     ports:
       - "3000:3000"
+# my image name is :- hello-world-js-app:1.0
+# docker build -t hello-world-js-app:1.0 .
