--- a/Hello_World_js_Docker/Dockerfile
+++ b/Hello_World_js_Docker/Dockerfile
@@ -1,10 +1,10 @@
-
 FROM node:20.9.0-alpine3.17
 WORKDIR /app
 COPY package.json ./
 RUN npm install
-COPY ./src .
-CMD ["node", "index.js"]
+COPY ./src /app
+RUN npm install -g nodemon
+CMD ["nodemon", "index.js"]
 EXPOSE 3000
 
 
