--- a/Hello_World_js_Docker/docker-compose.yml
+++ b/Hello_World_js_Docker/docker-compose.yml
@@ -2,8 +2,10 @@ version: "3"
 
 services:
   hello-world-app:
-    image: hello-world-js-app:1.0
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
-# my image name is :- hello-world-js-app:1.0
-# docker build -t hello-world-js-app:1.0 .
+    volumes:
+      - ./src:/app/src
