--- a/Hello_World_js_Docker/docker-compose.yml
+++ b/Hello_World_js_Docker/docker-compose.yml
@@ -10,6 +10,4 @@ services:
       - "3000:3000"
     volumes:
       - ./src:/app
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    command: ["nodemon", "index.js"]
+      - /app/node_modules
