--- a/Hello_World_js_Docker/Dockerfile
+++ b/Hello_World_js_Docker/Dockerfile
@@ -1,10 +1,12 @@
+# Dockerfile
 FROM node:20.9.0-alpine3.17
+
 WORKDIR /app
-# COPY package.json ./
-# RUN npm install
+
+RUN npm install nodemon -g
+
 COPY ./src /app
-RUN npm install
-RUN npm install -g nodemon
-# CMD ["nodemon", "index.js"]
+
 EXPOSE 3000
 
+CMD ["nodemon", "app.js"]
